cmake_minimum_required(VERSION 3.24)
project(BeeCrowd_problems)

set(CMAKE_CXX_STANDARD 17)

add_executable(BeeCrowd_problems main.cpp src/Problem_2374.cpp include/Problem_2374.h "include/Problem_1515.h" "src/Problem_1515.cpp" "src/Problem_2189.cpp" "include/Problem_2189.h" "include/Problem_2006.h" "src/Problem_2006.cpp" "src/Problem_2427.cpp" "include/Problem_2427.h")
